# CHHANGELOG

All notable changes to this project will be documented in this file.

## v0.0.2
- create button page login facebook
- create button Create Account and terms of service

## v.0.0.1
- Setup environment project SIMasjid