@@ -5,7 +5,6 @@ import Login from "./src/screens/Login";
 
 export default class App extends Component {
   render() {
-    // return <Login/>
-    return <LoggedOut />;
+    return <Login/>
   }
 }
